force-app/main/default/objects/Order/fields/Amount_Excluding_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excluding_Credit_Memo__c</fullName>
    <label>Amount Excluding Credit Memo</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>