force-app/main/default/objects/Order/fields/Bank_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Number__c</fullName>
    <label>Bank Branch Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>