force-app/main/default/objects/Order/fields/Bank_Institution_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Institution_Number__c</fullName>
    <label>Bank Institution Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>