force-app/main/default/objects/Order/fields/Bank_Transit_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transit_Number__c</fullName>
    <label>Bank Transit Number</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>