force-app/main/default/objects/Order/fields/Bill_To_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Email__c</fullName>
    <label>Bill To Contact Email</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>