force-app/main/default/objects/Order/fields/Bill_To_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Phone__c</fullName>
    <formula>BillToContact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Contact Phone</label>
    <type>Text</type>
</CustomField>