force-app/main/default/objects/Order/fields/CreditMemo_Total__c.field-meta.xml
<CustomField>
    <fullName>CreditMemo_Total__c</fullName>
    <label>CreditMemo Total</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>