force-app/main/default/objects/Order/fields/Last_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction__c</fullName>
    <label>Last Transaction</label>
    <summarizedField>Transaction__c.CreatedDate</summarizedField>
    <summaryForeignKey>Transaction__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>