force-app/main/default/objects/Order/fields/Payment_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Total__c</fullName>
    <label>Payment Total</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Transaction__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>