force-app/main/default/objects/Order/fields/Products_Count__c.field-meta.xml
<CustomField>
    <fullName>Products_Count__c</fullName>
    <label>Products Count</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>