force-app/main/default/objects/Order/fields/Sum_of_Transactions_in_QB__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Transactions_in_QB__c</fullName>
    <label>Sum of Transactions in QB</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryForeignKey>Transaction__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>